<resources>
    <string name="app_name">taskMaster</string>
    <string name="add_task_text_view" />
    <string name="submitted_confirmation"> Submitted! </string>
    <string name="all_tasks_image_placeholder" />
    <string name="all_tasks_textview" />
    <string name="title_activity_task_detail">TaskDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_task_name"> No Task Name </string>
    <string name="no_body"> No Body</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">blank_task_name</string>
    <string name="task_date">Task Date</string>
    <string name="task_date2">Task Date</string>
    <string name="task_description">Task Description</string>
    <string name="task_title">Task Title</string>
    <string name="add_task">Add Task</string>
    <string name="task_description2">Task Description</string>
    <string name="my_task">My Task</string>
    <string name="add_task3">Add Task</string>
    <string name="name" />
    <string name="nickname" />
    <string name="Save" />
    <string name="sign_up_page" />
    <string name="sign_up_page2">Sign Up Page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_page">Login Page</string>


</resources>